# rustmachineguard

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml
docs/: AGENT-SBOM-PROPOSAL.md  THREAT-CATALOG.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_agent_settings.rs  fuzz_dangerous_patterns.rs  fuzz_diff_engine.rs  fuzz_env_parser.rs  fuzz_exposure_catalog.rs  fuzz_extract_version.rs  fuzz_fleet_report.rs  fuzz_marketplaces.rs  fuzz_mcp_json.rs  fuzz_mcp_probe_reader.rs  fuzz_registry_parse.rs  fuzz_ssh_classify.rs
src/: analysis.rs  compliance.rs  diff.rs  identity.rs  lib.rs  main.rs  models.rs  registry.rs
src/catalogs/: builtin.rs  builtin_catalog.json  mod.rs
src/output/: blueprint.rs  fleet.rs  html.rs  json.rs  mod.rs  sbom.rs  terminal.rs
src/platform/: linux.rs  macos.rs  mod.rs
src/scanners/: agent_settings.rs  ai_credentials.rs  ai_frameworks.rs  ai_tools.rs  browser_extensions.rs  cloud_credentials.rs  container_tools.rs  env_files.rs  exposure.rs  extensions.rs  ide.rs  marketplaces.rs  mcp.rs  mcp_probe.rs  mod.rs  node_packages.rs  notebook_servers.rs  package_configs.rs  rules_files.rs  shell_configs.rs  skills.rs  ssh_keys.rs  transcripts.rs
tests/: blueprint_schema.rs  property_tests.rs  vulnerable_range.rs
tests/fixtures/: README.md  cyclonedx-2.0-bundled.schema.json
